fix: partials footer & menu

--- a/templates/galeria/base.html
+++ b/templates/galeria/base.html
@@ -15,9 +15,11 @@
 </head>
 
 <body>
+    {% include 'galeria/partials/_menu.html' %}
     {% block content %}
     
     {% endblock %}
+    {% include 'galeria/partials/_footer.html' %}
 </body>
 
 </html>
