--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -28,30 +28,31 @@
 					<h2 class="cards__titulo">Navegue pela galeria</h2>
 					<ul class="cards__lista">
 						{% if cards %}
-						{% for fotografia in cards %}
-							<li class="card">
-								<a href="{% url 'imagem' %}">
-									<img
-										class="card__imagem"
-										src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}"
-										alt="foto"
-									/>
-								</a>
-								<span class="card__tag">Estrelas</span>
-								<div class="card__info">
-									<p class="card__titulo">{{ fotografia.nome }}</p>
-									<div class="card__texto">
-										<p class="card__descricao">{{ fotografia.legenda }}</p>
-										<span>
-											<img
-												src="{% static '/assets/ícones/1x/favorite_outline.png' %}"
-												alt="ícone de coração"
-											/>
-										</span>
+							{% for fotografia in cards %}
+								<li class="card">
+									<a href="{% url 'imagem' fotografia.id %}">
+										<img
+											class="card__imagem"
+											src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}"
+											alt="foto"
+										/>
+									</a>
+									<span class="card__tag">Estrelas</span>
+									<div class="card__info">
+										<p class="card__titulo">{{ fotografia.nome }}</p>
+										<div class="card__texto">
+											<p class="card__descricao">{{ fotografia.legenda }}</p>
+											<span>
+												<img
+													src="{% static '/assets/ícones/1x/favorite_outline.png' %}"
+													alt="ícone de coração"
+												/>
+											</span>
+										</div>
 									</div>
-								</div>
-							</li>
-						{% endfor %}
+								</li>
+							{% endfor %}
+						{% else %}
 						{% endif %}
 
 					</ul>
