django admin config

--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -16,7 +16,7 @@
 							</p>
 							<p class="imagem__descricao">{{ fotografia.legenda }}</p>
 							<p class="imagem__texto">
-								
+								{{ fotografia.descricao }}
 							</p>
 						</div>
 					</div>
