alterando o index para utilizar o diretório media

--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -31,11 +31,19 @@
 							{% for fotografia in cards %}
 								<li class="card">
 									<a href="{% url 'imagem' fotografia.id %}">
+									{% if fotografia.foto == "" or fotografia.foto == None %}
 										<img
 											class="card__imagem"
-											src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}"
+											src="{% static '/assets/imagens/galeria/not-found.png' %}"
 											alt="foto"
 										/>
+									{% else %}
+										<img
+											class="card__imagem"
+											src="{{ fotografia.foto.url }}"
+											alt="foto"
+										/>
+									{% endif %}
 									</a>
 									<span class="card__tag">Estrelas</span>
 									<div class="card__info">
