--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -5,10 +5,18 @@
 		<section class="conteudo">
 			<section class="imagem">
 				<div class="imagem__conteudo">
+					{% if fotografia.foto == "" or fotografia.foto == None %}
 					<img
 						class="imagem__imagem"
-						src="{% static '/assets/imagens/galeria/' %}{{ fotografia.foto }}"
+						src="{% static '/assets/imagens/galeria/not-found.png' %}"
 					/>
+					{% else %}
+					<img
+						class="imagem__imagem"
+						src="{{ fotografia.foto.url }}"
+						alt="foto"
+					/>
+					{% endif %}
 					<div class="imagem__info">
 						<div class="imagem__texto">
 							<p class="imagem__titulo">
