implementação da função de busca

--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -61,6 +61,9 @@
 								</li>
 							{% endfor %}
 						{% else %}
+							<div class="imagem__texto">
+								<p>Nenhuma fotografia encontrada :(</p>
+							</div>
 						{% endif %}
 
 					</ul>
