novo app usuarios (lidar com autenticação)

--- a/templates/galeria/partials/_menu.html
+++ b/templates/galeria/partials/_menu.html
@@ -7,8 +7,7 @@
 			alt="Logo da Alura Space"
 		/>
 		<div class="cabecalho__busca">
-			<div class="busca__fundo">
-				<form action="{% url 'buscar' %}">
+				<form action="{% url 'buscar' %}" class="busca__fundo">
 					<input
 						class="busca__input"
 						type="text"
@@ -23,8 +22,6 @@
 						/>
 					</button>
 				</form>
-				
-			</div>
 		</div>
 	</header>
 	<main class="principal">
