templates login e cadastro

--- a/templates/galeria/partials/_menu.html
+++ b/templates/galeria/partials/_menu.html
@@ -27,19 +27,19 @@
 	<main class="principal">
 		<section class="menu-lateral">
 			<nav class="menu-lateral__navegacao">
-				<a href="#"
+				<a href="{% url 'index' %}"
 					><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}" />
 					Home</a
 				>
-				<a href="#"
+				<a href="{% url 'login' %}"
 					><img
 						src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"
 					/>
-					Mais vistas</a
+					Login</a
 				>
-				<a href="#"
+				<a href="{% url 'cadastro' %}"
 					><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}" />
-					Novas</a
+					Cadastro</a
 				>
 				<a href="#"
 					><img
