Estilização dos formularios + formulario de cadastro

--- a/templates/galeria/partials/_footer.html
+++ b/templates/galeria/partials/_footer.html
@@ -15,5 +15,5 @@
 			/>
 		</a>
 	</div>
-	<p class="rodape__texto">Desenvolvido por Alura</p>
+	<p class="rodape__texto">Desenvolvido por Marcelo Dias</p>
 </footer>
