funcionalidade de logout

--- a/templates/galeria/partials/_menu.html
+++ b/templates/galeria/partials/_menu.html
@@ -46,11 +46,11 @@
 					><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}" />
 					Cadastro</a
 				>
-				<a href="#"
+				<a href="{% url 'logout' %}"
 					><img
 						src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"
 					/>
-					Surpreenda-me</a
+					Logout</a
 				>
 			</nav>
 		</section>
