refatoração dos alertas

--- a/setup/static/styles/style.css
+++ b/setup/static/styles/style.css
@@ -406,3 +406,16 @@ table {
     --bs-alert-bg: #cfe2ff;
     --bs-alert-border-color: #b6d4fe;
 }
+
+.alert-danger {
+    --bs-alert-color: #842029;
+    --bs-alert-bg: #f8d7da;
+    --bs-alert-border-color: #f5c2c7;
+}
+
+.alert-success {
+    --bs-alert-color: #0a3622;
+    --bs-alert-bg: #d1e7dd;
+    --bs-alert-border-color: #a3cfbb;
+    --bs-alert-link-color: #0a3622;
+}
