--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -6,11 +6,7 @@
 			src="{% static '/assets/logo/Logo(2).png' %}"
 			alt="Logo da Alura Space"
 		/>
-		{% for message in messages %}
-            <div class="alert alert-primary">
-                <p id="messages">{{ message }}</p>
-            </div>
-        {% endfor %}
+		{% include 'partials/_alertas.html' %}
 		<div class="cabecalho__busca">
 				<form action="{% url 'buscar' %}" class="busca__fundo">
 					<input
