urls e views do crud de imagem

--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -48,5 +48,11 @@
 					/>
 					Logout</a
 				>
+				<a href="{% url 'nova_imagem' %}"
+					><img
+						src="{% static '/assets/ícones/1x/new.png' %}"
+					/>
+					Nova Imagem</a
+				>
 			</nav>
 		</section>
