--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -27,6 +27,18 @@
 								{{ fotografia.descricao }}
 							</p>
 						</div>
+						<div>
+							<a href="{% url 'editar_imagem' %}">
+								<button class="btn btn-success col-12" style="padding: top 5px;">
+									Editar
+								</button>
+							</a>
+							<a href="{% url 'deletar_imagem' %}">
+								<button class="btn btn-danger col-12" style="padding: top 5px;">
+									Deletar
+								</button>
+							</a>
+						</div>
 					</div>
 				</div>
 			</section>
