--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -4,13 +4,13 @@
 	<div class="rodape__icones">
 		<a href="https://twitter.com/AluraOnline" target="”_blank”">
 			<img
-				src="{% static '/assets/ícones/1x/twitter.png' %}"
+				src="{% static 'assets/ícones/1x/twitter.png' %}"
 				alt="ícone twitter"
 			/>
 		</a>
 		<a href="https://www.instagram.com/aluraonline/" target="”_blank”">
 			<img
-				src="{% static '/assets/ícones/1x/instagram.png' %}"
+				src="{% static 'assets/ícones/1x/instagram.png' %}"
 				alt="ícone instagram"
 			/>
 		</a>
