--- a/templates/partials/_menu.html
+++ b/templates/partials/_menu.html
@@ -3,7 +3,7 @@
 <div class="pagina-inicial">
 	<header class="cabecalho">
 		<img
-			src="{% static '/assets/logo/Logo(2).png' %}"
+			src="{% static 'assets/logo/Logo(2).png' %}"
 			alt="Logo da Alura Space"
 		/>
 		{% include 'partials/_alertas.html' %}
@@ -18,7 +18,7 @@
 					<button type="submit">
 						<img
 							class="busca__icone"
-							src="{% static '/assets/ícones/1x/search.png' %}"
+							src="{% static 'assets/ícones/1x/search.png' %}"
 							alt="ícone de search"
 						/>
 					</button>
@@ -29,28 +29,28 @@
 		<section class="menu-lateral">
 			<nav class="menu-lateral__navegacao">
 				<a href="{% url 'index' %}"
-					><img src="{% static '/assets/ícones/1x/Home - ativo.png' %}" />
+					><img src="{% static 'assets/ícones/1x/Home - ativo.png' %}" />
 					Home</a
 				>
 				<a href="{% url 'login' %}"
 					><img
-						src="{% static '/assets/ícones/1x/Mais vistas - inativo.png' %}"
+						src="{% static 'assets/ícones/1x/Mais vistas - inativo.png' %}"
 					/>
 					Login</a
 				>
 				<a href="{% url 'cadastro' %}"
-					><img src="{% static '/assets/ícones/1x/Novas - inativo.png' %}" />
+					><img src="{% static 'assets/ícones/1x/Novas - inativo.png' %}" />
 					Cadastro</a
 				>
 				<a href="{% url 'logout' %}"
 					><img
-						src="{% static '/assets/ícones/1x/Surpreenda-me - inativo.png' %}"
+						src="{% static 'assets/ícones/1x/Surpreenda-me - inativo.png' %}"
 					/>
 					Logout</a
 				>
 				<a href="{% url 'nova_imagem' %}"
 					><img
-						src="{% static '/assets/ícones/1x/new.png' %}"
+						src="{% static 'assets/ícones/1x/new.png' %}"
 					/>
 					Nova Imagem</a
 				>
